--- a/ipynbs/Neural Net.ipynb
+++ b/ipynbs/Neural Net.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +27,259 @@
     "import matplotlib as mpl\n",
     "\n",
     "# Optimization module in scipy\n",
-    "from scipy import optimize"
+    "from scipy import optimize\n",
+    "\n",
+    "#Skynet\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "from sklearn import preprocessing"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = np.zeros((7868, 76))\n",
+    "Y_train = np.zeros((7868, 147))\n",
+    "X_test = np.zeros((2705, 76))\n",
+    "predictions = np.zeros((2705, 147))\n",
+    "\n",
+    "# Load X_train\n",
+    "dir_string = '../data/Kaggle_Final/train_feature_files'\n",
+    "training_files = os.listdir(dir_string)\n",
+    "\n",
+    "for file in training_files:\n",
+    "    file_path = dir_string + '/' + file\n",
+    "    song_id_str = file_path.split('/')[-1].split('.')[0]\n",
+    "    a = np.load(file_path)\n",
+    "    a_summary = a['summary']\n",
+    "    X_train[int(song_id_str)] = a_summary\n",
+    "    \n",
+    "# Load Y_train\n",
+    "with open('../data/Kaggle_Final/cal10k_train_data.csv', 'r') as y_train_file:\n",
+    "    for line in y_train_file:\n",
+    "        if 'id' not in line:\n",
+    "            features_w_id = line.strip().split(',')\n",
+    "            features_no_id = features_w_id[1:]\n",
+    "            for idx in range(len(features_no_id)):\n",
+    "                features_no_id[idx] = int(features_no_id[idx])\n",
+    "            Y_train[int(features_w_id[0])] = np.array(features_no_id)\n",
+    "            \n",
+    "# Load X_test\n",
+    "dir_string = '../data/Kaggle_Final/test_feature_files/'\n",
+    "testing_files = os.listdir(dir_string)\n",
+    "\n",
+    "for file in testing_files:\n",
+    "    file_path = dir_string + file\n",
+    "    song_id_str = file_path.split('/')[-1].split('.')[0]\n",
+    "    data = np.load(file_path)\n",
+    "    data_summary = data['summary']\n",
+    "    X_test[int(song_id_str)] = data_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean the baby"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7868, 76)\n",
+      "(2705, 76)\n"
+     ]
+    }
+   ],
+   "source": [
+    "where_are_NaNs = np.isnan(X_train)\n",
+    "X_train[where_are_NaNs] = 0\n",
+    "where_are_NaNs = np.isnan(X_test)\n",
+    "X_test[where_are_NaNs] = 0\n",
+    "print(X_train.shape)\n",
+    "print(X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process the baby"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.04953433e+00 -1.82717419e+00 -3.14378223e-01 ... -7.78459164e-01\n",
+      "  -6.15547973e-01  3.63916714e-02]\n",
+      " [-5.89573467e-01 -5.43698480e-01  1.26742646e+00 ...  3.02933909e+00\n",
+      "   6.36986019e+00 -3.53863479e-02]\n",
+      " [-8.71579002e-01 -1.45694081e+00  8.06538601e-01 ... -1.39196830e+00\n",
+      "   7.20935543e-02  7.04298404e-01]\n",
+      " ...\n",
+      " [-6.80810552e-01  1.28278619e+00 -6.48520049e-01 ...  1.12104502e+00\n",
+      "   4.24172839e-03 -6.16879755e-01]\n",
+      " [-8.78688385e-01  4.17609241e-01 -1.75760504e-01 ...  6.52454338e-01\n",
+      "  -1.75135222e-01 -5.08273063e-01]\n",
+      " [-9.54521806e-01  4.17609241e-01  4.14536114e-01 ...  1.37187461e-01\n",
+      "  -1.69513068e-01 -5.52251472e-01]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaled_X = preprocessing.scale(X_train)\n",
+    "scaled_test = preprocessing.scale(X_test)\n",
+    "print(scaled_X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fit the baby"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "147\n"
+     ]
+    }
+   ],
+   "source": [
+    "genre_models = list()\n",
+    "for i in range(147):\n",
+    "    genre_model = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(25, 2), random_state=1)\n",
+    "    genre_model.fit(scaled_X, Y_train[:,i])\n",
+    "    genre_models.append(genre_model)\n",
+    "print(len(genre_models))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Teach the robot how to love"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.97905917 0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.97905917 0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.97905917 0.         0.         ... 0.         0.         0.        ]\n",
+      " ...\n",
+      " [0.97905917 0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.97905917 0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.97905917 0.         0.         ... 0.         0.         0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(147):\n",
+    "    genre_prediction = genre_models[i].predict(X_test)\n",
+    "    genre_prediction_prob = genre_models[i].predict_proba(X_test)\n",
+    "    predictions[:, i] = genre_prediction_prob[:,1]  # Get probability that it is class=1\n",
+    "        \n",
+    "print(predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12827.330277677907\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sum(predictions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Show the world"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open('../data/Kaggle_Final/cal10k_test_random_submission.csv', 'r')\n",
+    "id_line = None\n",
+    "for line in file:\n",
+    "    if 'id' in line:\n",
+    "        id_line = line\n",
+    "ids = []\n",
+    "for i in range(2705):\n",
+    "    ids.append(int(i))\n",
+    "predictions = np.insert(predictions, 0, ids, axis=1)\n",
+    "string_predictions = []\n",
+    "for song_idx in range(len(predictions)):\n",
+    "    song = predictions[song_idx]\n",
+    "    song_string = []\n",
+    "    for genre_idx in range(len(song)):\n",
+    "        if genre_idx != 0:\n",
+    "            song_string.append(str(predictions[song_idx, genre_idx]))\n",
+    "        else: \n",
+    "            song_string.append(str(predictions[song_idx, genre_idx]))\n",
+    "    string_predictions.append(song_string)\n",
+    "with open('../data/Kaggle_Final/skynet_will_rise.csv', 'w') as out_file:\n",
+    "    out_file.write(id_line)\n",
+    "    for song_array in string_predictions:\n",
+    "        song_array[0] = str(int(float(song_array[0])))\n",
+    "        out_file.write(\",\".join(song_array) + os.linesep)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
