Let there be layers

--- a/ipynbs/Neural Net.ipynb
+++ b/ipynbs/Neural Net.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,12 @@
     "from scipy import optimize\n",
     "\n",
     "#Skynet\n",
+    "import sklearn as skl\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
-    "from sklearn import preprocessing"
+    "from sklearn import preprocessing\n",
+    "\n",
+    "import math"
    ]
   },
   {
@@ -272,6 +275,94 @@
     "    for song_array in string_predictions:\n",
     "        song_array[0] = str(int(float(song_array[0])))\n",
     "        out_file.write(\",\".join(song_array) + os.linesep)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More complex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6.27524661e-04 9.78629986e-19 5.64165184e-21 ... 9.20491919e-11\n",
+      "  1.45547472e-19 1.48744568e-17]\n",
+      " [2.93065744e-17 4.31783726e-43 2.17902993e-31 ... 8.13907740e-21\n",
+      "  3.35772062e-27 4.34166210e-31]\n",
+      " [1.35617390e-16 2.19896412e-41 1.55660915e-17 ... 1.22406882e-20\n",
+      "  6.08756741e-24 1.09969740e-10]\n",
+      " ...\n",
+      " [3.32737088e-25 1.05074213e-15 9.02470949e-26 ... 5.79029978e-33\n",
+      "  1.57059754e-22 8.81079147e-34]\n",
+      " [8.01204885e-46 1.79309435e-48 5.90988215e-41 ... 1.13228423e-31\n",
+      "  4.46828541e-54 1.26562543e-09]\n",
+      " [3.02398804e-33 1.17043406e-26 3.34740789e-27 ... 2.30403919e-22\n",
+      "  4.18458321e-07 2.43110366e-07]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_cv_train = X_train[0:-1000]\n",
+    "Y_cv_train = Y_train[0:-1000]\n",
+    "X_cv_test = X_train[-1000:]\n",
+    "Y_cv_test = Y_train[-1000:]\n",
+    "cv_predictions = np.zeros(Y_cv_test.shape)\n",
+    "\n",
+    "scaled_cv_X = preprocessing.scale(X_cv_train)\n",
+    "scaled_cv_test = preprocessing.scale(X_cv_test)\n",
+    "\n",
+    "genre_models = list()\n",
+    "for i in range(147):  # For each genre\n",
+    "    genre_model = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(76, 50), random_state=1)\n",
+    "    genre_model.fit(scaled_cv_X, Y_cv_train[:,i])\n",
+    "    genre_models.append(genre_model)\n",
+    "\n",
+    "\n",
+    "for i in range(147):\n",
+    "    genre_prediction_prob = genre_models[i].predict_proba(scaled_cv_test)\n",
+    "    cv_predictions[:, i] = genre_prediction_prob[:,1]  # Get probability that it is class=1\n",
+    "        \n",
+    "print(cv_predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 147)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Only one class present in y_true. ROC AUC score is not defined in that case.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-73-159c1340e0c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcv_predictions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mskl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroc_auc_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY_cv_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv_predictions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/envs/machine_learning/lib/python3.6/site-packages/sklearn/metrics/ranking.py\u001b[0m in \u001b[0;36mroc_auc_score\u001b[0;34m(y_true, y_score, average, sample_weight, max_fpr)\u001b[0m\n\u001b[1;32m    354\u001b[0m     return _average_binary_score(\n\u001b[1;32m    355\u001b[0m         \u001b[0m_binary_roc_auc_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maverage\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 356\u001b[0;31m         sample_weight=sample_weight)\n\u001b[0m\u001b[1;32m    357\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    358\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/machine_learning/lib/python3.6/site-packages/sklearn/metrics/base.py\u001b[0m in \u001b[0;36m_average_binary_score\u001b[0;34m(binary_metric, y_true, y_score, average, sample_weight)\u001b[0m\n\u001b[1;32m    118\u001b[0m         \u001b[0my_score_c\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_score\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnot_average_axis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m         score[c] = binary_metric(y_true_c, y_score_c,\n\u001b[0;32m--> 120\u001b[0;31m                                  sample_weight=score_weight)\n\u001b[0m\u001b[1;32m    121\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    122\u001b[0m     \u001b[0;31m# Average the results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/machine_learning/lib/python3.6/site-packages/sklearn/metrics/ranking.py\u001b[0m in \u001b[0;36m_binary_roc_auc_score\u001b[0;34m(y_true, y_score, sample_weight)\u001b[0m\n\u001b[1;32m    322\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_binary_roc_auc_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    323\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 324\u001b[0;31m             raise ValueError(\"Only one class present in y_true. ROC AUC score \"\n\u001b[0m\u001b[1;32m    325\u001b[0m                              \"is not defined in that case.\")\n\u001b[1;32m    326\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Only one class present in y_true. ROC AUC score is not defined in that case."
+     ]
+    }
+   ],
+   "source": [
+    "print(cv_predictions.shape)\n",
+    "print(skl.metrics.roc_auc_score(Y_cv_test, cv_predictions))"
    ]
   },
   {
